tests/snapshots/examples_fixtures/type_system__failing__06_runtime_float_string_return.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/06_runtime_float_string_return.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify String with Float.

  --> examples/type_system/failing/06_runtime_float_string_return.flx:1:22
  |
1 | fn compute_rate() -> Float {
  |                      ^^^^^
  |                      ----- expected String, found Float


--> compiler error[E300]: TYPE UNIFICATION ERROR

Cannot unify Float with String.

  --> examples/type_system/failing/06_runtime_float_string_return.flx:2:5
  |
2 |     "slow"
  |     ^^^^^^
  |     ------ expected Float, found String
  |     ------ return expression type is known at compile time

Help:
  return expression type does not match the declared return type

Found 2 errors.
== stdout ==
<not executed>
